<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen3">

    <TextView
        android:id="@+id/slide3_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide3_text"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:background="@drawable/round_corners" />

    <ImageView
        android:id="@+id/slide3_img"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:src="@drawable/safetyslide3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/slide3_text1"
        android:layout_marginTop="20dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/slide3_img_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide3_text2"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/slide3_img"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:textAlignment="center"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:background="@drawable/round_corners" />

</RelativeLayout>