<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <ImageView
        android:id="@+id/close"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_baseline_close_24"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_mobile"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toEndOf="@+id/close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/close"
        app:layout_constraintBottom_toBottomOf="@+id/close"
        android:layout_marginRight="20dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phone_number_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="vertical"
        android:background="@drawable/popup_text_shape"
        android:layout_marginTop="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/close">

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:hint="@string/register_mobile2"
            android:inputType="phone"
            android:maxLength="13"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBarMobile"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:visibility="invisible"
        android:indeterminate="true"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_layout"/>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:text="@string/submitBtn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_shape"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_number_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>